Sonar hygiene: reduce code smells from 92 to 0
Adds an opt-in `sonar` Maven profile (README-documented) and works the
whole tree to a clean Quality Gate: 0 code smells, 0 bugs, 0
vulnerabilities, 0.0% duplication, 90.5% coverage. All 461 tests pass.

Passes applied:
- S1068 (unused private field) — class-level suppressions with rationale
  on 3 test files whose nested DTOs are JavaBeans read via reflection by
  FieldPathResolver / PredicateFactory / Spring's QuerydslPredicate.
- S5778 (assertThrows lambda with multiple throwing invocations) — hoist
  `pathResolver.createRootPath(...)`, `settings(...)`, `predicateParameter()`,
  `new ServletWebRequest(...)`, `Set.of(...)`, `List.of(...)` etc. into
  locals so the lambda body contains a single throwing call. Applied
  across 7 test files.
- S135 (loops with multiple break/continue) — restructure into if/else-if
  chains or extract-method (TmfSortParser.parseToken,
  JsonPathSortParser.stripWildcards, JsonPathFilterPredicateBuilder.stripWildcards).
- S3776 / S6541 (cognitive complexity / Brain Method) — decompose the 5
  worst methods into many small, single-purpose private helpers:
  * FieldSelectionUtil.parseFieldsRecursive → parseNonEmbeddedProperty +
    nodeForRequestedField + recurseIntoNested.
  * Tmf630PredicateArgumentResolver.normalizeEncodedOperatorKey →
    isOperatorLiteralStart + matchOperatorAt + collectEncodedValues (+
    OperatorMatch record).
  * Tmf630PredicateArgumentResolver.buildAttributePredicate → applyAttributeEntry
    orchestrator + isReservedKey + normalize + parseAndAllowlist +
    resolveField + clauseFor + enforceMaxValuesPerKey + buildMultiValueClause +
    buildRepeatedValueClause + appendPerValueToPerKey (+ SplitPolicy
    record; incrementClauseCount(int)→int fold replaced by a mutable
    ClauseCounter that throws on overflow).
  * JsonPathFilterPredicateBuilder.toPredicate → 4 predicateFor* methods
    (one per node type) + isAllowedFieldOrReport + resolveFieldOrEmpty +
    resolve